@startuml wehkammp2punt0

Package "ProductOverviewP" {
  class "ProductOverviewPage"
  class "_ProductOverviewPageState"
}

Product *-- ProductOverviewP
ProductItem *-- ProductOverviewP

ProductItem --* PhotoHero
HeroAnimation *-- PhotoHero

class "Product" {
  +String id
  +String title
  +String description
  +double price
  +String imageUrl
  +bool isFavorite
}

class "ProductItem" {
  +String id
  +String title
  +String imageUrl
  +String description
  +double price
}

class "PhotoHero" {
  +String photo
  +void Function() onTap
  +double width
}

class "HeroAnimation" {
  +String imageurL
  +String description
  +double price
}

class "ProductOverviewPage" {
  +State<ProductOverviewPage> createState()
}

class "_ProductOverviewPageState" {
  +List<Product> loadedProducts
}

@enduml